<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEAFF"
    android:orientation="vertical"
    android:textAlignment="center">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="#81A7F0"
        android:fontFamily="serif"
        android:paddingTop="140dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/tvTopic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:paddingTop="60dp"
        android:rotationX="0"
        android:text="@string/txtTopicTitle"
        android:textAlignment="center"
        android:textColor="#81A7F0"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvUserTopic"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:paddingTop="60dp"
        android:rotationX="0"
        android:text="@string/txtUserTopic"
        android:textAlignment="center"
        android:textColor="#81A7F0"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:backgroundTint="#5289F2"
        android:elevation="5dp"
        android:fontFamily="serif"
        android:insetLeft="50dp"
        android:insetTop="100dp"
        android:insetRight="50dp"
        android:insetBottom="100dp"
        android:stateListAnimator="@null"
        android:text="@string/txtPlay"
        android:textSize="30sp"
        android:translationZ="2dp"
        app:cornerRadius="70dp"
        tools:ignore="TextContrastCheck" />
</LinearLayout>