<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="1dp"
    android:padding="60dp"
    android:background="@color/backgroundDark"
    android:orientation="vertical"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/tvScoreTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/txtScoreTitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvUserScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:rotationX="0"
        android:text="@string/txtUserScore"
        android:textColor="@color/white"
        android:textSize="80sp" />

    <Button
        android:id="@+id/btnPlayAgain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="0.5"

        android:background="@drawable/button_default"

        android:fontFamily="@font/montserrat"
        android:text="@string/txtPlayAgain"
        android:textColor="@color/white"
        android:textSize="24sp" />

</LinearLayout>
