<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDarkBlue"
    android:orientation="vertical"
    android:padding="10dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/tvProgressCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_weight="1"
        android:paddingTop="20dp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/pbProgress"
        style="?android:attr/progressBarStyleHorizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:progressTint="#DCEAFF" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="20dp"
        android:text="@string/txtQuestion"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btnA1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/btnDefault"

        android:elevation="5dp"
        android:fontFamily="serif"
        android:insetLeft="30dp"
        android:insetTop="20dp"

        android:insetRight="30dp"
        android:insetBottom="20dp"
        android:padding="20dp"
        android:stateListAnimator="@null"

        android:text="@string/txtAnswer1"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:cornerRadius="70dp" />

    <Button
        android:id="@+id/btnA2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/btnDefault"

        android:elevation="5dp"
        android:fontFamily="serif"
        android:insetLeft="30dp"
        android:insetTop="20dp"

        android:insetRight="30dp"
        android:insetBottom="20dp"
        android:padding="20dp"
        android:stateListAnimator="@null"

        android:text="@string/txtAnswer2"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:cornerRadius="70dp" />

    <Button
        android:id="@+id/btnA3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/btnDefault"

        android:elevation="5dp"
        android:fontFamily="serif"
        android:insetLeft="30dp"
        android:insetTop="20dp"

        android:insetRight="30dp"
        android:insetBottom="20dp"
        android:padding="20dp"
        android:stateListAnimator="@null"

        android:text="@string/txtAnswer3"

        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:cornerRadius="70dp" />

    <Button
        android:id="@+id/btnA4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/btnDefault"

        android:elevation="5dp"
        android:fontFamily="serif"
        android:insetLeft="30dp"
        android:insetTop="20dp"

        android:insetRight="30dp"
        android:insetBottom="20dp"
        android:padding="20dp"
        android:stateListAnimator="@null"

        android:text="@string/txtAnswer4"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:translationZ="2dp"
        app:cornerRadius="70dp" />

    <Button
        android:id="@+id/btnNext"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"

        android:backgroundTint="@color/btnDefault"

        android:elevation="5dp"

        android:fontFamily="serif"
        android:insetLeft="30dp"
        android:insetTop="20dp"
        android:insetRight="30dp"

        android:insetBottom="20dp"
        android:stateListAnimator="@null"
        android:text="@string/txtNext"

        android:textColor="#FFFFFF"
        android:textSize="16sp"

        android:translationZ="2dp"
        android:visibility="invisible"
        app:cornerRadius="70dp" />

</LinearLayout>

